; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_type.c_symt_new_array.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_type.c_symt_new_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symt_array = type { i32, i32, %struct.TYPE_2__, %struct.symt*, %struct.symt* }
%struct.TYPE_2__ = type { i32 }
%struct.module = type { i32 }
%struct.symt = type { i32 }

@SymTagArrayType = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.symt_array* @symt_new_array(%struct.module* %0, i32 %1, i32 %2, %struct.symt* %3, %struct.symt* %4) #0 {
  %6 = alloca %struct.module*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.symt*, align 8
  %10 = alloca %struct.symt*, align 8
  %11 = alloca %struct.symt_array*, align 8
  store %struct.module* %0, %struct.module** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.symt* %3, %struct.symt** %9, align 8
  store %struct.symt* %4, %struct.symt** %10, align 8
  %12 = load %struct.module*, %struct.module** %6, align 8
  %13 = getelementptr inbounds %struct.module, %struct.module* %12, i32 0, i32 0
  %14 = call %struct.symt_array* @pool_alloc(i32* %13, i32 32)
  store %struct.symt_array* %14, %struct.symt_array** %11, align 8
  %15 = icmp ne %struct.symt_array* %14, null
  br i1 %15, label %16, label %37

16:                                               ; preds = %5
  %17 = load i32, i32* @SymTagArrayType, align 4
  %18 = load %struct.symt_array*, %struct.symt_array** %11, align 8
  %19 = getelementptr inbounds %struct.symt_array, %struct.symt_array* %18, i32 0, i32 2
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  store i32 %17, i32* %20, align 8
  %21 = load i32, i32* %7, align 4
  %22 = load %struct.symt_array*, %struct.symt_array** %11, align 8
  %23 = getelementptr inbounds %struct.symt_array, %struct.symt_array* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load i32, i32* %8, align 4
  %25 = load %struct.symt_array*, %struct.symt_array** %11, align 8
  %26 = getelementptr inbounds %struct.symt_array, %struct.symt_array* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 4
  %27 = load %struct.symt*, %struct.symt** %9, align 8
  %28 = load %struct.symt_array*, %struct.symt_array** %11, align 8
  %29 = getelementptr inbounds %struct.symt_array, %struct.symt_array* %28, i32 0, i32 4
  store %struct.symt* %27, %struct.symt** %29, align 8
  %30 = load %struct.symt*, %struct.symt** %10, align 8
  %31 = load %struct.symt_array*, %struct.symt_array** %11, align 8
  %32 = getelementptr inbounds %struct.symt_array, %struct.symt_array* %31, i32 0, i32 3
  store %struct.symt* %30, %struct.symt** %32, align 8
  %33 = load %struct.module*, %struct.module** %6, align 8
  %34 = load %struct.symt_array*, %struct.symt_array** %11, align 8
  %35 = getelementptr inbounds %struct.symt_array, %struct.symt_array* %34, i32 0, i32 2
  %36 = call i32 @symt_add_type(%struct.module* %33, %struct.TYPE_2__* %35)
  br label %37

37:                                               ; preds = %16, %5
  %38 = load %struct.symt_array*, %struct.symt_array** %11, align 8
  ret %struct.symt_array* %38
}

declare dso_local %struct.symt_array* @pool_alloc(i32*, i32) #1

declare dso_local i32 @symt_add_type(%struct.module*, %struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
